# GlassFalcon

./: AUTH_KEYS.md  BUGFIX_30M_CAP_RELOCKING_2026_07_07.md  FRESH_SESSION_CHECKLIST.md  README.md  RSA_PRIVATE_KEY.der  RSA_PRIVATE_KEY.pem  UNLOCK_PROTOCOL_REFERENCE.md  settings.gradle
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro  version.properties
android/app/src/main/: AndroidManifest.xml
android/sdk/: build.gradle.kts
docs/: 2026-07-06-0x11-handshake-discovery.md
docs/reverse-engineering/: 2026-07-06-0x11-handshake-discovery.md  ANALYSIS_SUMMARY.md  DJI-GO4-Security-Analysis.md  GO4_CERTIFICATE_INFRASTRUCTURE.md  README.md  RSA_KEY_EXTRACTION_GUIDE.md  findings.md
docs/reverse-engineering/2026-07-06-unlock-session/: FINDINGS.md  analyze.py  parse_bm.py  parse_kprobe.py
flasher/: index.html
plugins/: README.md
plugins/encrypted-stream/: SERVER_SPEC.md  watch.html
plugins/encrypted-stream/relay/: go.mod  main.go  watch.html
sdk/docs/: getting-started.md  parameters-status.md  protocol.md
sdk/python/: README.md  pyproject.toml
sdk/python/src/glassfalcon/: __init__.py  adb_manager.py  duml.py  duml_cmds.py  mission_engine.py  mission_planner.py  params.py  telemetry.py  video_decrypt.py
tools/: RE_TOOLS_README.md  extract_0x11_key_from_firmware.md  find-drone.sh  install.ps1  install.sh  phone.sh  verify_0x11_signature.py
tools/frida/: README_0x11_CAPTURE.md  hook_0x11_signature.js
tools/re-extraction/: extract_keychain.py  hook_dex.py  hook_waes.py
(+75 files in other folders)
